infra/k8s/moderation-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderation-depl
spec:
  # number of pods we want to create running some particular image
  replicas: 1
  # we are telling deployment to find all the different pods with the label of pods
  selector:
    matchLabels:
      app: moderation

  #template is where we define exact config of a pod that we want this deployment to create
  template:
    metadata:
      labels:
        app: moderation
    spec:
      containers:
        - name: moderation
          image: mihirvir09/moderation
---
apiVersion: v1
kind: Service
metadata:
  name: moderation-srv
spec:
  selector:
    app: moderation
  type: ClusterIP
  ports:
    - name: moderation
      protocol: TCP
      port: 4003
      targetPort: 4003
