infra/k8s/post-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: posts-srv
spec:
  type: NodePort
  # selector tells which pods needs to be exposed to the outside world
  # try to find all the different pods named posts and expose to the outside world
  selector:
    app: posts
  ports:
    - name: posts
      protocol: TCP
      # node port service has its own port which we are giving 4000
      port: 4000
      # ultimate port we want to send traffic to is port 4000
      targetPort: 4000
