infra/k8s/posts-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-depl

spec:
  # number of pods we want to create running some particular image
  replicas: 1
  # we are telling deployment to find all the different pods with the label of pods
  selector:
    matchLabels:
      app: posts

  #template is where we define exact config of a pod that we want this deployment to create
  template:
    metadata:
      labels:
        app: posts
    spec:
      containers:
        - name: posts
          image: mihirvir09/posts
---
apiVersion: v1
kind: Service
metadata:
  name: posts-clusterip-srv
spec:
  selector:
    app: posts
  type: ClusterIP
  ports:
    - name: posts
      protocol: TCP
      port: 4000
      targetPort: 4000
