infra/k8s/query-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-depl

spec:
  # number of pods we want to create running some particular image
  replicas: 1
  # we are telling deployment to find all the different pods with the label of pods
  selector:
    matchLabels:
      app: query

  #template is where we define exact config of a pod that we want this deployment to create
  template:
    metadata:
      labels:
        app: query
    spec:
      containers:
        - name: query
          image: mihirvir09/query
---
apiVersion: v1
kind: Service
metadata:
  name: query-srv
spec:
  selector:
    app: query
  type: ClusterIP
  ports:
    - name: query
      protocol: TCP
      port: 4003
      targetPort: 4003
