infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  # its going to help ingress controller to understand we are feeding it some routing rules
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  # rules will have all the different routing rules that we want to apply
  # to teach the ingress controller how to take incoming traffic and route them off to
  # different pods
  rules:
    - host: posts.com
      http:
        paths:
          - path: /posts
            pathType: Prefix
            backend:
              service:
                name: posts-clusterip-srv
                port:
                  number: 4000
              # serviceName: posts-clusterip-srv
              # servicePort: 4000
